Shader support with runtime shader compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories(deps/sdl/include)
 # bgfx
 add_subdirectory(deps/bgfx.cmake)
 include_directories(deps/bgfx.cmake/bgfx/include)
+include_directories(deps/bgfx.cmake/bgfx/tools/brtshaderc)
 include_directories(deps/bgfx.cmake/bimg/include)
 include_directories(deps/bgfx.cmake/bx/include)
 
@@ -20,12 +21,13 @@ set(MAIN_SRC
     src/graphics/GraphicsSystem.cpp
     src/graphics/gfxhelpers.cpp
     src/game/Game.cpp
+    src/shaders/Shader.cpp
 
     # Headers
     src/graphics/GraphicsSystem.hpp
     src/graphics/gfxhelpers.hpp
     src/game/Game.hpp
-)
+    src/shaders/Shader.hpp)
 
 add_executable(graphics_test ${MAIN_SRC})
-target_link_libraries(graphics_test PUBLIC SDL2-static SDL2main bgfx bimg bx)
+target_link_libraries(graphics_test PUBLIC SDL2-static SDL2main bgfx brtshaderc bimg bx)
